--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,11 +8,12 @@
         <p>{{ category.name }}</p>
 
         {% for subCategory in category.subCategories %}
-            <p><strong>{{ subCategory.name }}</strong></p>
-            {#            <a href="{{ path('subCategory.name') }}">Lien</a>#}
+            <p><strong>{{ subCategory.name }}</a></strong></p>
+            {# <a href="{{ path('subCategory.name') }}">Lien</a>#}
    {% endfor %}
 
 
     {% endfor %}
 
 {% endblock %}
+    
